--- a/src/styles/custom-1400.css
+++ b/src/styles/custom-1400.css
@@ -12,4 +12,12 @@
             / 0.3fr 1fr 0.10fr;
         /* gap: 5px; */
     }
+
+    .body {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        align-content: flex-start;
+        justify-content: center;
+    }
  }
