add connection with end point that verifies session (this solution is temporal)

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -19,6 +19,11 @@
     border-radius: 5px;
 }
 
+.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+}
+
 @keyframes animationxd {
     0%{
         transform: translate(0, 0);
